objects/Service_Integration_Field_Mappings__mdt.object
<CustomObject>
    <description>This custom metadata stores the data mapping between Salesforce and other systems used by integration processes</description>
    <fields>
        <fullName>External_System_Mapping__c</fullName>
        <label>External System Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Process__c</fullName>
        <label>Integration Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_Name__c</fullName>
        <label>SFDC Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_Value__c</fullName>
        <label>SFDC Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Integration Field Mapping</label>
    <pluralLabel>Service Integration Field Mappings</pluralLabel>
</CustomObject>